Need to fix circle spacing

--- a/css/codeup-design-project.css
+++ b/css/codeup-design-project.css
@@ -1,3 +1,6 @@
+body {
+    background-color: rgba(211, 211, 211, 0.5);
+}
 .dot {
     width: 105px;
     height: 105px;
@@ -6,20 +9,16 @@
     font-size: 20px;
     color: #fff;
     text-align: center;
-
+    border: white solid 5px;
 }
 .row {
     display: flex;
     justify-content: center;
 }
 
-.row div {
-    border: white solid 5px;
-}
 
 .noMargin {
     margin: 1em;
-
 }
 
 #redcircle{
